# Network-Flow-Collector-Query-Service

./: README.md  docker-compose.yml
api-service/: requirements.txt
api-service/app/: clickhouse.py  config.py  insert.py  main.py  producer.py  schemas.py  worker.py
cpp-collector/: CMakeLists.txt  README.md
cpp-collector/include/collectors/: FakeCollector.hpp  FileCollector.hpp  NetflowUdpCollector.hpp  NetflowV9UdpCollector.hpp
cpp-collector/include/core/: ICollector.hpp  IParser.hpp  ISink.hpp
cpp-collector/include/model/: NormalizedFlow.hpp
cpp-collector/include/parsers/: NetflowV5Parser.hpp  NetflowV9Parser.hpp  SuricataParser.hpp  ZeekParser.hpp
cpp-collector/include/sinks/: HttpSink.hpp
cpp-collector/src/: main.cpp  main.cpp.save
cpp-collector/src/collectors/: FakeCollector.cpp  FileCollector.cpp  NetflowUdpCollector.cpp  NetflowV9UdpCollector.cpp
cpp-collector/src/model/: NormalizedFlow.cpp
cpp-collector/src/parsers/: NetflowV5Parser.cpp  NetflowV9Parser.cpp  SuricataParser.cpp  ZeekParser.cpp
cpp-collector/src/sinks/: HttpSink.cpp
database/: clickhouse_init.sql
docs/: ARCHITECTURE.md  BENCHMARK.md  COLLECTORS.md  Collector.md
passive-asset-discovery/api/app/: main.py
passive-asset-discovery/collector-cpp/src/: main.cpp
passive-asset-discovery/docs/demo-output/: assets.json
samples/: suricata_eve.json
scripts/: benchmark_ingest.py  benchmark_query.py  send_netflow_v5.py  send_netflow_v9.py
